--- a/quantumcomputing_hackathon_2024.ipynb
+++ b/quantumcomputing_hackathon_2024.ipynb
@@ -168,6 +168,493 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station_id</th>\n",
+       "      <th>city_name</th>\n",
+       "      <th>date</th>\n",
+       "      <th>season</th>\n",
+       "      <th>avg_temp_c</th>\n",
+       "      <th>min_temp_c</th>\n",
+       "      <th>max_temp_c</th>\n",
+       "      <th>precipitation_mm</th>\n",
+       "      <th>snow_depth_mm</th>\n",
+       "      <th>avg_wind_dir_deg</th>\n",
+       "      <th>avg_wind_speed_kmh</th>\n",
+       "      <th>peak_wind_gust_kmh</th>\n",
+       "      <th>avg_sea_level_pres_hpa</th>\n",
+       "      <th>sunshine_total_min</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>41515</td>\n",
+       "      <td>Asadabad</td>\n",
+       "      <td>1957-07-01</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>21.1</td>\n",
+       "      <td>35.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>41515</td>\n",
+       "      <td>Asadabad</td>\n",
+       "      <td>1957-07-02</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>18.9</td>\n",
+       "      <td>32.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>41515</td>\n",
+       "      <td>Asadabad</td>\n",
+       "      <td>1957-07-03</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>24.3</td>\n",
+       "      <td>16.7</td>\n",
+       "      <td>35.6</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>41515</td>\n",
+       "      <td>Asadabad</td>\n",
+       "      <td>1957-07-04</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>26.6</td>\n",
+       "      <td>16.1</td>\n",
+       "      <td>37.8</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>41515</td>\n",
+       "      <td>Asadabad</td>\n",
+       "      <td>1957-07-05</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>30.8</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>41.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>41515</td>\n",
+       "      <td>Asadabad</td>\n",
+       "      <td>1957-07-06</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>30.2</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>41.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>41515</td>\n",
+       "      <td>Asadabad</td>\n",
+       "      <td>1957-07-07</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>24.4</td>\n",
+       "      <td>39.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>41515</td>\n",
+       "      <td>Asadabad</td>\n",
+       "      <td>1957-07-08</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>30.9</td>\n",
+       "      <td>24.4</td>\n",
+       "      <td>38.9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>41515</td>\n",
+       "      <td>Asadabad</td>\n",
+       "      <td>1957-07-09</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>26.1</td>\n",
+       "      <td>21.1</td>\n",
+       "      <td>34.4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>41515</td>\n",
+       "      <td>Asadabad</td>\n",
+       "      <td>1957-07-10</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>35.6</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>41515</td>\n",
+       "      <td>Asadabad</td>\n",
+       "      <td>1957-07-11</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>26.3</td>\n",
+       "      <td>17.2</td>\n",
+       "      <td>36.1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>41515</td>\n",
+       "      <td>Asadabad</td>\n",
+       "      <td>1957-07-12</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>28.8</td>\n",
+       "      <td>21.7</td>\n",
+       "      <td>36.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>41515</td>\n",
+       "      <td>Asadabad</td>\n",
+       "      <td>1957-07-13</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>27.2</td>\n",
+       "      <td>21.1</td>\n",
+       "      <td>36.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>41515</td>\n",
+       "      <td>Asadabad</td>\n",
+       "      <td>1957-07-14</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>20.6</td>\n",
+       "      <td>36.1</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>41515</td>\n",
+       "      <td>Asadabad</td>\n",
+       "      <td>1957-07-15</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>28.6</td>\n",
+       "      <td>21.1</td>\n",
+       "      <td>37.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>41515</td>\n",
+       "      <td>Asadabad</td>\n",
+       "      <td>1957-07-16</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>31.7</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>41.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>41515</td>\n",
+       "      <td>Asadabad</td>\n",
+       "      <td>1957-07-17</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>33.1</td>\n",
+       "      <td>23.3</td>\n",
+       "      <td>46.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>41515</td>\n",
+       "      <td>Asadabad</td>\n",
+       "      <td>1957-07-18</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>33.3</td>\n",
+       "      <td>26.1</td>\n",
+       "      <td>41.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>41515</td>\n",
+       "      <td>Asadabad</td>\n",
+       "      <td>1957-07-19</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>30.1</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>35.6</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>41515</td>\n",
+       "      <td>Asadabad</td>\n",
+       "      <td>1957-07-20</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>27.6</td>\n",
+       "      <td>21.1</td>\n",
+       "      <td>34.4</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   station_id city_name       date  season  avg_temp_c  min_temp_c  \\\n",
+       "0       41515  Asadabad 1957-07-01  Summer        27.0        21.1   \n",
+       "1       41515  Asadabad 1957-07-02  Summer        22.8        18.9   \n",
+       "2       41515  Asadabad 1957-07-03  Summer        24.3        16.7   \n",
+       "3       41515  Asadabad 1957-07-04  Summer        26.6        16.1   \n",
+       "4       41515  Asadabad 1957-07-05  Summer        30.8        20.0   \n",
+       "5       41515  Asadabad 1957-07-06  Summer        30.2        22.8   \n",
+       "6       41515  Asadabad 1957-07-07  Summer        31.0        24.4   \n",
+       "7       41515  Asadabad 1957-07-08  Summer        30.9        24.4   \n",
+       "8       41515  Asadabad 1957-07-09  Summer        26.1        21.1   \n",
+       "9       41515  Asadabad 1957-07-10  Summer        26.0         NaN   \n",
+       "10      41515  Asadabad 1957-07-11  Summer        26.3        17.2   \n",
+       "11      41515  Asadabad 1957-07-12  Summer        28.8        21.7   \n",
+       "12      41515  Asadabad 1957-07-13  Summer        27.2        21.1   \n",
+       "13      41515  Asadabad 1957-07-14  Summer        28.0        20.6   \n",
+       "14      41515  Asadabad 1957-07-15  Summer        28.6        21.1   \n",
+       "15      41515  Asadabad 1957-07-16  Summer        31.7        22.8   \n",
+       "16      41515  Asadabad 1957-07-17  Summer        33.1        23.3   \n",
+       "17      41515  Asadabad 1957-07-18  Summer        33.3        26.1   \n",
+       "18      41515  Asadabad 1957-07-19  Summer        30.1        25.0   \n",
+       "19      41515  Asadabad 1957-07-20  Summer        27.6        21.1   \n",
+       "\n",
+       "    max_temp_c  precipitation_mm  snow_depth_mm  avg_wind_dir_deg  \\\n",
+       "0         35.6               0.0            NaN               NaN   \n",
+       "1         32.2               0.0            NaN               NaN   \n",
+       "2         35.6               1.0            NaN               NaN   \n",
+       "3         37.8               4.1            NaN               NaN   \n",
+       "4         41.7               0.0            NaN               NaN   \n",
+       "5         41.1               0.0            NaN               NaN   \n",
+       "6         39.4               0.0            NaN               NaN   \n",
+       "7         38.9               0.0            NaN               NaN   \n",
+       "8         34.4               2.0            NaN               NaN   \n",
+       "9         35.6               0.3            NaN               NaN   \n",
+       "10        36.1               2.0            NaN               NaN   \n",
+       "11        36.7               0.0            NaN               NaN   \n",
+       "12        36.1               0.0            NaN               NaN   \n",
+       "13        36.1               0.3            NaN               NaN   \n",
+       "14        37.2               0.0            NaN               NaN   \n",
+       "15        41.7               0.0            NaN               NaN   \n",
+       "16        46.1               0.0            NaN               NaN   \n",
+       "17        41.1               0.0            NaN               NaN   \n",
+       "18        35.6               1.0            NaN               NaN   \n",
+       "19        34.4               3.0            NaN               NaN   \n",
+       "\n",
+       "    avg_wind_speed_kmh  peak_wind_gust_kmh  avg_sea_level_pres_hpa  \\\n",
+       "0                  NaN                 NaN                     NaN   \n",
+       "1                  NaN                 NaN                     NaN   \n",
+       "2                  NaN                 NaN                     NaN   \n",
+       "3                  NaN                 NaN                     NaN   \n",
+       "4                  NaN                 NaN                     NaN   \n",
+       "5                  NaN                 NaN                     NaN   \n",
+       "6                  NaN                 NaN                     NaN   \n",
+       "7                  NaN                 NaN                     NaN   \n",
+       "8                  NaN                 NaN                     NaN   \n",
+       "9                  NaN                 NaN                     NaN   \n",
+       "10                 NaN                 NaN                     NaN   \n",
+       "11                 NaN                 NaN                     NaN   \n",
+       "12                 NaN                 NaN                     NaN   \n",
+       "13                 NaN                 NaN                     NaN   \n",
+       "14                 NaN                 NaN                     NaN   \n",
+       "15                 NaN                 NaN                     NaN   \n",
+       "16                 NaN                 NaN                     NaN   \n",
+       "17                 NaN                 NaN                     NaN   \n",
+       "18                 NaN                 NaN                     NaN   \n",
+       "19                 NaN                 NaN                     NaN   \n",
+       "\n",
+       "    sunshine_total_min  \n",
+       "0                  NaN  \n",
+       "1                  NaN  \n",
+       "2                  NaN  \n",
+       "3                  NaN  \n",
+       "4                  NaN  \n",
+       "5                  NaN  \n",
+       "6                  NaN  \n",
+       "7                  NaN  \n",
+       "8                  NaN  \n",
+       "9                  NaN  \n",
+       "10                 NaN  \n",
+       "11                 NaN  \n",
+       "12                 NaN  \n",
+       "13                 NaN  \n",
+       "14                 NaN  \n",
+       "15                 NaN  \n",
+       "16                 NaN  \n",
+       "17                 NaN  \n",
+       "18                 NaN  \n",
+       "19                 NaN  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weather_df = pd.read_parquet('daily_weather.parquet', engine='fastparquet')\n",
+    "weather_df.head(20)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "AL3B1okJ5Gy7"
